2007-05-18  Arno Rehn  <arno@arnorehn.de>

	* Made 'ref' arguments work.

2007-05-15  Richard Dale  <rdale@foton.es>

	* Regenerated the Qyoto sources from the current qt-copy snapshot as 
	  there have been quite a few changes
	* Added a QSsl class with enums, but this should really be a C# namespace
	  as the C++ version is a namespace.

2007-05-14  Richard Dale  <rdale@foton.es>

	* Added code generation for 'ref' argument types

2007-04-26  Richard Dale  <rdale@foton.es>

	* The classes which need to have interfaces, such as QUrl because they
	  are used with multiple inheritance in C++, were always being defined
	  as interface types in method arguments. This isn't needed, so change
	  arg types from 'IQUrl' etc to 'QUrl' etc.

2007-04-25  Arno Rehn  <arno@arnorehn.de>

	* Special cased QVector<QRgb> when marshalling.
	* Fixed two more memory leaks.
	* Removed all the instances of delegates in SmokeMarshallers.cs. In C# 2.0
	  we can directly specify a method, we don't need an instance of a correspondending
	  delegate anymore.

2007-04-16  Richard Dale  <rdale@foton.es>

	* Added a QyotoHash() method for deriving a hash value from the c++
	  pointer of an instance.

2007-04-15  Richard Dale  <rdale@foton.es>

	* The Qyoto project is built with no symbols visible by default in
	  kdebindings, so add function declarations in qyoto.h to make it work.
	* Added some more implicit type conversion operator methods and chaanged
	  the code in the tutorial t14 example to use them

2007-04-14  Richard Dale  <rdale@foton.es>
	
	* Fixed some compiler warnings
	* Added implicit operator conversions for various types to QVariants

2007-04-13  Arno Rehn  <arno@arnorehn.de>

	* Fixed CMakeLists.txt's to work with the new directory structure. Some lines of
	  the top-level CMakeLists.txt should be put in subdirectories, though.
	* Subclasses of QTextBlockUserData are now contained instances.

2007-04-09  Richard Dale  <rdale@foton.es>
