@@ -1,3 +1,9 @@
+2007-05-27  Arno Rehn  <arno@arnorehn.de>
+
+	* Removed the redundant stuff for ref arguments again and implemented them
+	  based on Richard's proposal, which is much simpler.
+	* Added marshallers for qreal (double) and bool references.
+
 2007-05-18  Arno Rehn  <arno@arnorehn.de>
 
 	* Made 'ref' arguments work.
